# pond

./: .gitignore  CLAUDE.md  Exe_prompt.md  LICENSE  README.md  TECH_STACK.md  install.sh  pyproject.toml  requirements.txt  run.py  run_pondtv.py  test_components.py  todo.md
archive/2024-12-19/: TECH_STACK.md  originalconcept.md
docs/: DEVELOPMENT.md  PLAN.md
packaging/: config.example.yml  pondtv.service
pondtv/: __init__.py  __main__.py  actions.py  browser.py  channels.py  config.py  database_manager.py  drive.py  input_kbd.py  main.py  manager.py  media_scanner.py  mpv_ipc.py  overlay.py  player_controller.py  playlist_engine.py  requirements.txt  state.py  usb_manager.py  utils.py
pondtv/config/: pondtv.service
pondtv/src/: config_manager.py  database_manager.py  input_handler.py  main.py  media_scanner.py  player_controller.py  playlist_engine.py  ui_manager.py  usb_manager.py
pondtv_app/: run.py
release/: 40-pondtv-udisks.rules  pondtv.pkla
release/boot-payload/: README.md  firstrun.sh
scripts/: build_release.sh  install.sh  install_one_command.sh  install_ssh.sh
setup/assets/: first_boot_install.sh
tests/: test_browser.py  test_channels.py  test_drive.py  test_manager.py  test_state.py
